# YouTubeLiveChatViewer

./: .gitignore  AICHANGELOG.md  Cargo.toml  Plan.md  README.md
.github/workflows/: release.yml
docs/app_renaming_and_icon/: implementation_plan.md  task.md  walkthrough.md
docs/gemini_integration/: implementation_plan.md  task.md  walkthrough.md
docs/obs_overlay/: implementation_plan.md  task.md  walkthrough.md
docs/obs_overlay_comments/: implementation_plan.md  task.md  walkthrough.md
docs/ui_optimization/: implementation_plan.md  task.md  walkthrough.md
docs/youtube_live_chat_viewer/: implementation_plan.md  task.md  walkthrough.md
for_agent/: spec.md
src/: app.rs  cevio.rs  dictionary.rs  gemini.rs  main.rs  settings.rs  text_filter.rs  web_server.rs  youtube.rs
